apps/slskd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slskd
  namespace: transmission
spec:
  type: ClusterIP
  selector:
    app: slskd
  ports:
    - name: web
      port: 5030
      targetPort: 5030
